--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <img src="C:\Users\idcxxxx1\Downloads" alt="Your Image">
+    <img src="images/your-image.jpg" alt="Your Image">
     <div class="message">Bot intended for private use only.</div>
 </body>
 </html>
