--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <img src="images/your-image.jpg" alt="Your Image">
+   <img src="images/atleast%20you%20tried.jpg" alt="At Least You Tried">
     <div class="message">Bot intended for private use only.</div>
 </body>
 </html>
